typescript
Script started on Fri 07 Mar 2014 10:45:28 PM PST
]0;donwshin@donwshin: ~/Networkdonwshin@donwshin:~/Network$ cat run
cd player/
javac -g list/*.java
cd ..
javac player/*java
javac ./*java
]0;donwshin@donwshin: ~/Networkdonwshin@donwshin:~/Network$ ./run
player/Set.java:3: error: package list does not exist
import list.*;
^
player/Set.java:11: error: cannot find symbol
  protected List set;
            ^
  symbol:   class List
  location: class Set
player/Set.java:28: error: cannot find symbol
    set = new DList();
              ^
  symbol:   class DList
  location: class Set
player/Set.java:50: error: cannot find symbol
    ListNode curr = set.front();
    ^
  symbol:   class ListNode
  location: class Set
player/Set.java:62: error: cannot find symbol
      catch (InvalidNodeException e) {
             ^
  symbol:   class InvalidNodeException
  location: class Set
player/Set.java:85: error: cannot find symbol
    ListNode this_curr = this.set.front();
    ^
  symbol:   class ListNode
  location: class Set
player/Set.java:86: error: cannot find symbol
    ListNode s_curr = s.set.front();
    ^
  symbol:   class ListNode
  location: class Set
player/Set.java:104: error: cannot find symbol
    catch (InvalidNodeException e) {
           ^
  symbol:   class InvalidNodeException
  location: class Set
player/Set.java:124: error: cannot find symbol
      ListNode this_curr = set.front();
      ^
  symbol:   class ListNode
  location: class Set
player/Set.java:125: error: cannot find symbol
      ListNode s_curr = s.set.front();
      ^
  symbol:   class ListNode
  location: class Set
player/Set.java:136: error: cannot find symbol
            ListNode temp = this_curr.next();
            ^
  symbol:   class ListNode
  location: class Set
player/Set.java:141: error: cannot find symbol
        catch (InvalidNodeException e) {
               ^
  symbol:   class InvalidNodeException
  location: class Set
player/Set.java:148: error: cannot find symbol
          ListNode temp = this_curr.next();
          ^
  symbol:   class ListNode
  location: class Set
player/Set.java:152: error: cannot find symbol
        catch (InvalidNodeException f) {
               ^
  symbol:   class InvalidNodeException
  location: class Set
Note: player/Set.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
14 errors
javac: invalid flag: ./*java
Usage: javac <options> <source files>
use -help for a list of possible options
]0;donwshin@donwshin: ~/Networkdonwshin@donwshin:~/Network$ exit()
> ^C
]0;donwshin@donwshin: ~/Networkdonwshin@donwshin:~/Network$ ^C
]0;donwshin@donwshin: ~/Networkdonwshin@donwshin:~/Network$ exit

Script done on Fri 07 Mar 2014 10:45:44 PM PST
